--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -61,43 +61,37 @@ ja:
     - :day
   datetime:
     distance_in_words:
-      about_x_hours:
-        one: 約1時間
-        other: 約%{count}時間
-      about_x_months:
-        one: 約1ヶ月
-        other: 約%{count}ヶ月
-      about_x_years:
-        one: 約1年
-        other: 約%{count}年
-      almost_x_years:
-        one: 1年弱
-        other: "%{count}年弱"
-      half_a_minute: 30秒前後
+      half_a_minute: "今"
       less_than_x_seconds:
-        one: 1秒以内
-        other: "%{count}秒未満"
-      less_than_x_minutes:
-        one: 1分以内
-        other: "%{count}分未満"
-      over_x_years:
-        one: 1年以上
-        other: "%{count}年以上"
+        one:   "今"
+        other: "今"
       x_seconds:
-        one: 1秒
-        other: "%{count}秒"
+        one:   "今"
+        other: "今"
+      less_than_x_minutes:
+        one:   "1分前"
+        other: "%{count}分前"
       x_minutes:
-        one: 1分
-        other: "%{count}分"
+        one:   "1分前"
+        other: "%{count}分前"
+      about_x_hours:
+        one:   "1時間前"
+        other: "%{count}時間前"
       x_days:
-        one: 1日
-        other: "%{count}日"
+        one:   "1日前"
+        other: "%{count}日前"
+      about_x_months:
+        one:   "1ヶ月前"
+        other: "%{count}ヶ月前"
       x_months:
-        one: 1ヶ月
-        other: "%{count}ヶ月"
-      x_years:
-        one: 1年
-        other: "%{count}年"
+        one:   "1ヶ月前"
+        other: "%{count}ヶ月前"
+      about_x_years:
+        one:   "1年前"
+        other: "%{count}年前"
+      over_x_years:
+        one:   "1年以上前"
+        other: "%{count}年以上前"
     prompts:
       second: 秒
       minute: 分
