--- a/config/locales/models.ja.yml
+++ b/config/locales/models.ja.yml
@@ -10,8 +10,8 @@ ja:
         name: ユーザー名
         password_confirmation: 確認用パスワード
         remember_me: 次回から自動的にログイン
-        yourself: 自己紹介
-        skill: 言語・スキル
+        # yourself: 自己紹介
+        # skill: 言語・スキル
       result:
         subtitle: サブタイトル
         title: タイトル
