profile設定 再追加

--- a/config/locales/models.ja.yml
+++ b/config/locales/models.ja.yml
@@ -10,8 +10,6 @@ ja:
         name: ユーザー名
         password_confirmation: 確認用パスワード
         remember_me: 次回から自動的にログイン
-        # yourself: 自己紹介
-        # skill: 言語・スキル
       result:
         subtitle: サブタイトル
         title: タイトル
@@ -20,4 +18,10 @@ ja:
         github: GitHubのURL
       comment:
         comment: コメント
+      profile:
+        yourself: 自己紹介
+        skill: 言語・スキル
+        twitter_account: twitter
+        github_account: Githubアカウント
+        
         
